# rencode

./: .gitignore  .travis.yml  MANIFEST.in  README.md  SPEC.md  build.py  pyproject.toml  rencode.pyx  setup.py  test_rencode.py  timetest.py
rencode/: __init__.py  _rencode.pyx  rencode.pyx  rencode_orig.py
tests/: test_rencode.py  timetest.py
travis/: build-wheels.sh
trunk/: rencode.pyx  setup.py  test_rencode.py  timetest.py
trunk/rencode/: rencode.pyx
trunk/tests/: test_rencode.py  timetest.py
