[tool.poetry]
name = "rencode"
version = "1.0.7"
description = "rencode is an object serialization library similar to bencode from the Bittorrent project."
authors = ["Andrew Resch <andrewresch@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
Cython = ">=3"
setuptools = "^80.4.0"

[tool.poetry.group.dev.dependencies]
black = "^21.9b0"
cython = "^3.1.0"
pytest = "^8.3.5"

[build-system]
requires = ["setuptools>=42", "wheel", "Cython"]
build-backend = "setuptools.build_meta"
