[tool.poetry]
name = "rencode"
version = "1.0.8"
description = "rencode is an object serialization library similar to bencode from the Bittorrent project."
authors = ["Andrew Resch <andrewresch@gmail.com>"]
license = "GPLv3"
include = [{path = "rencode/*.so", format = "wheel"}, {path = "rencode/*.c", format = "sdist"}]
packages = [{include = "rencode"}]
exclude = ['rencode/*.c']

[tool.poetry.build]
script = "build.py"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^21.9b0"
cython = "^3.1.0"
pytest = "^8.3.5"

[tool.poetry.group.build.dependencies]
setuptools = "^80.9.0"
cython = "^3.1.1"
poetry-core = "^2.1.3"

[build-system]
requires = ["poetry-core", "setuptools", "cython"]
build-backend = "poetry.core.masonry.api"
